# tatou

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  flag  fuzzing-bugs.md  mutmut_report.html  mutmut_results.txt
db/: tatou.sql
server/: Dockerfile  entrypoint.sh  flag  fuzz-config.yaml  pyproject.toml  requirements.txt  test_rmap_client.py
server/keys/: GroupTest_priv.asc
server/pki/: GroupTest.asc
server/src/: axel_watermark.py  johan_watermark.py  pj_watermarking_method.py  server.py  unsafe_bash_bridge_append_eof.py  validators.py  watermarking_utils.py
server/test/: conftest.py  fuzz_helpers.py  johan_watermarkingtest.py  test_api.py  test_create_watermark.py  test_ddos.py  test_delete_document.py  test_for_individual_pj.py  test_get_documents.py  test_get_version.py  test_list_document.py  test_list_versions.py  test_load_plugin.py  test_read_watermark.py  test_rmap.py  test_rmap_all_groups.py  test_rmap_client.py  test_security_logging.py  test_watermarking_all_methods.py
server/test/fuzzing/: conftest.py  test_fuzz_create_user.py  test_fuzz_create_watermark.py  test_fuzz_delete_document.py  test_fuzz_get_document.py  test_fuzz_get_version.py  test_fuzz_list_all_versions.py  test_fuzz_list_documents.py  test_fuzz_list_versions.py  test_fuzz_load_plugin.py  test_fuzz_login.py  test_fuzz_read_watermark.py  test_fuzz_rmap_get_link.py  test_fuzz_rmap_initiate.py  test_fuzz_upload_document.py  test_fuzzing_create-user  test_fuzzing_get-document.py  test_regression_fuzzing.py
server/test/testkey/: GroupTest_priv.asc
