[project]
name = "Tatou-Server"
version = "0.0.1"
description = "PDF Watermarking platform"
requires-python = ">=3.11"
dependencies = [
	"PyMuPDF>=1.21.1",
	"Flask==3.0.3",
	"gunicorn==21.2.0",
	"PyMySQL==1.1.2",
	"SQLAlchemy==2.0.43",
	"dill==0.4.0",
	"rmap @https://github.com/nharrand/RMAP-Server/releases/download/v2.0.0/rmap-2.0.0-py3-none-any.whl",
	"PyPDF2>=3.0.0",
	"reportlab>=4.0.0",
	"cryptography>=42.0.0",
	"requests==2.31.0",
	"python-dotenv>=1.0.0",
	"flask-limiter>=4.0.0"

]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test"]                 # This is for testing in docker original was just test
python_files = ["test_*.py"]

[project.scripts]
pdfwm = "watermarking_cli:main"                 # now you can run `pdfwm methods`

[tool.mutmut]
paths_to_mutate = ["src"]
tests_dir = ["test"]
runner = "pytest"
use_coverage_data = true
backup = false
working_dir = "/app"



